==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed a bug which could cause job entries in `sys.jobs` not being removed
  when a connection error occurred while transferring the results of the job
  execution.

- Fixed an issue that could cause a ``ALTER TABLE`` statement to fail with an
  exception on partitioned tables created with CrateDB < 1.2.

- Enforce validation of column constraints for ``INSERT`` statements with a
  subquery as source and in combination with ``ON DUPLICATE KEY UPDATE``.

- Fixed an issue that caused an error to be thrown when using ``GROUP BY`` or
  ``DISTINCT`` on a column of type ``IP`` in case there are rows with null
  value for that column.