@@ -31,8 +31,10 @@ import io.crate.operation.collect.collectors.RemoteCollector;
 import io.crate.planner.distribution.DistributionInfo;
 import io.crate.planner.node.dql.RoutedCollectPhase;
 import io.crate.planner.projection.Projections;
+import org.elasticsearch.cluster.routing.IllegalShardRoutingStateException;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
+import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.inject.Singleton;
@@ -80,6 +82,11 @@ public class RemoteCollectorFactory {
         // for update operations primaryShards must be used
         // (for others that wouldn't be the case, but at this point it is not easily visible which is the case)
         ShardRouting shardRouting = shardRoutings.primaryShard();
+
+        if (shardRouting.state().equals(ShardRoutingState.STARTED) == false) {
+            throw new IllegalShardRoutingStateException(shardRouting,
+                "Cannot collect from a shard that's not STARTED");
+        }
 
         final String remoteNodeId = shardRouting.currentNodeId();
         assert remoteNodeId != null : "primaryShard not assigned :(";
